<resources>
    <string name="login_username">Email</string>
    <string name="login_pass">Password</string>
    <string name="login_err">Authentication failed</string>
    <string name="logout_button">Log out</string>
    <string name="login_button">Log in</string>
    <string name="login_register">Register</string>
    <string name="app_name" translatable="false">JaEstic</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="loading">Loading</string>

    <string name="title_ativity_main">JaEstic</string>
    <string name="sub_title_activity_main">App admin</string>
    <string name="cardViewCategory">Category</string>
    <string name="cardViewAddCategory">Add Category</string>
    <string name="cardViewAddDish">Add Dish</string>
    <string name="cardViewOrders">Orders</string>
    <string name="login_google">Sign in with google</string>
    <string name="textViewEmail">Email</string>
    <string name="login_or">You do not have an account?. Create one.</string>
    <string name="login">Login</string>
</resources>